unpackaged/main/default/objects/Survey_Calls_Sales__c/Survey_Calls_Sales__c.object-meta.xml
<CustomObject>
    <label>Survey Calls Sales</label>
    <nameField>
        <displayFormat>SCS-{0000}</displayFormat>
        <label>Survey Calls Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Calls Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>