unpackaged/main/default/objects/Survey_Calls_Sales__c/fields/Answered_language__c.field-meta.xml
<CustomField>
    <fullName>Answered_language__c</fullName>
    <label>Answered language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language_ISO</valueSetName>
    </valueSet>
</CustomField>