unpackaged/main/default/objects/Survey_Calls_Sales__c/fields/Call_Global_Score__c.field-meta.xml
<CustomField>
    <fullName>Call_Global_Score__c</fullName>
    <label>Call Global Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>