unpackaged/main/default/objects/Survey_Calls_Sales__c/fields/Comment_Answer__c.field-meta.xml
<CustomField>
    <fullName>Comment_Answer__c</fullName>
    <label>Comment Answer</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>