unpackaged/main/default/objects/Survey_Calls_Sales__c/fields/Comment_Call_Global__c.field-meta.xml
<CustomField>
    <fullName>Comment_Call_Global__c</fullName>
    <label>Comment Call Global</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>