unpackaged/main/default/objects/Survey_Calls_Sales__c/fields/Comment_Understanding_Request__c.field-meta.xml
<CustomField>
    <fullName>Comment_Understanding_Request__c</fullName>
    <label>Comment Understanding Request</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>