unpackaged/main/default/objects/Survey_Calls_Sales__c/fields/Date_of_Answer__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Answer__c</fullName>
    <label>Date of Answer</label>
    <type>Date</type>
</CustomField>