unpackaged/main/default/objects/Survey_Calls_Sales__c/fields/Task_SubType__c.field-meta.xml
<CustomField>
    <fullName>Task_SubType__c</fullName>
    <label>Task SubType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>