unpackaged/main/default/objects/Survey_Calls_Sales__c/fields/Understanding_Request_Score__c.field-meta.xml
<CustomField>
    <fullName>Understanding_Request_Score__c</fullName>
    <label>Understanding Request Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>