unpackaged/main/default/objects/Survey_Calls_Sales__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Task_Type__c</columns>
    <columns>Task_SubType__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Date_of_Answer__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Answered_language__c</columns>
    <columns>Call_Global_Score__c</columns>
    <columns>Comment_Call_Global__c</columns>
    <columns>Answer_Score__c</columns>
    <columns>Comment_Answer__c</columns>
    <columns>Understanding_Request_Score__c</columns>
    <columns>Comment_Understanding_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>